--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
 	"name": "knight-lab-storytelling-tools",
 	"title": "Knight Lab Storytelling Tools",
 	"version": "1.0.0",
-	"description": "Implement the Knight Lab storytelling tools into your WordPress site!",
+	"description": "Allows seamless embedding for the Knight Lab Storytelling Tools",
 	"author": {
-		"name": "inn_nerds",
-		"url": "http://nerds.inn.org"
+		"name": "innlabs",
+		"url": "https://labs.inn.org"
 	},
 	"license": "GPLv2",
 	"devDependencies": {
@@ -17,7 +17,37 @@
 		"grunt-contrib-clean": "latest",
 		"grunt-contrib-compress": "latest",
 		"grunt-wp-deploy": "latest",
-		"load-grunt-tasks": "latest"
+		"load-grunt-tasks": "latest",
+		"autoprefixer": "latest",
+		"babel-preset-es2015": "latest",
+		"bourbon": "latest",
+		"bourbon-neat": "latest",
+		"browser-sync": "latest",
+		"css-mqpacker": "latest",
+		"del": "latest",
+		"eslint-config-wordpress": "latest",
+		"glob": "latest",
+		"gulp": "latest",
+		"gulp-babel": "latest",
+		"gulp-cheerio": "latest",
+		"gulp-concat": "latest",
+		"gulp-cssnano": "latest",
+		"gulp-eslint": "latest",
+		"gulp-imagemin": "latest",
+		"gulp-notify": "latest",
+		"gulp-plumber": "latest",
+		"gulp-postcss": "latest",
+		"gulp-rename": "latest",
+		"gulp-sass": "latest",
+		"gulp-sass-lint": "latest",
+		"gulp-sort": "latest",
+		"gulp-sourcemaps": "latest",
+		"gulp-svgmin": "latest",
+		"gulp-svgstore": "latest",
+		"gulp-uglify": "latest",
+		"gulp-util": "latest",
+		"gulp-wp-pot": "latest",
+		"gulp.spritesmith": "latest"
 	},
 	"scripts": {
 		"test": "dockunit",
