--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -1,18 +1,19 @@
 {
   "generator-plugin-wp": {
     "name": "Knight Lab Storytelling Tools",
-    "homepage": "http://knightlab.northwestern.edu/projects/#storytelling",
-    "description": "Implement the Knight Lab storytelling tools into your WordPress site!",
+    "homepage": "https://labs.inn.org",
+    "description": "Allows seamless embedding for the Knight Lab Storytelling Tools",
     "version": "1.0.0",
-    "author": "inn_nerds",
-    "authoremail": "nerds@inn.org",
-    "authorurl": "http://nerds.inn.org",
+    "author": "innlabs",
+    "authoremail": "labs@inn.org",
+    "authorurl": "https://labs.inn.org",
     "license": "GPLv2",
     "slug": "knight-lab-storytelling-tools",
     "classname": "Knight_Lab_Storytelling_Tools",
+    "mainclassname": "Knight_Lab_Storytelling_Tools",
     "classprefix": "KLST_",
     "prefix": "knight_lab_storytelling_tools",
     "year": 2017,
-    "currentVersionWP": "4.7.1"
+    "currentVersionWP": "4.7.2"
   }
 }
